--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,7 +16,12 @@
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        
+        <div id="favorites_buttons_<%=  book_favorites_path(@book.id) %>">
         <td class="favorite-btn"><%= render "favorites/favorite-btn", book: book %></td>
+        </div>
+        
+        
         <td>コメント数: <%= book.book_comments.count %></td>
       </tr>
     <% end %>
