--- a/app/views/favorites/_favorite-btn.html.erb
+++ b/app/views/favorites/_favorite-btn.html.erb
@@ -3,8 +3,4 @@
 <% else %>
   <%= link_to book.favorites.count, book_favorites_path(book), method: :post, remote: true, class: "fas fa-heart heart_blue" %>
 <% end %>
-xxx
-
-
-xxxxcc
-cc
+aaa
