--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,1 @@
-$('#favorites_buttons_<%= @book.id %>').html("<%= j(render partial: 'books/index', locals: {book: @book}) %>");
+$("#book_<%= @book.id %> .favorite-btn").html("<%= j(render 'favorites/favorite-btn', book: @book) %>");
