--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,7 +9,7 @@
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
   		<table class='table'>
-  		  <tr id="book_<%= @book.id%>">
+  		  <tr id="book_<%= @book.id %>">
   		    <td><%= link_to user_path(@book.user) do %>
             <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
             <%= @book.user.name %>
@@ -26,6 +26,10 @@
         </tr>
       </table>
       <%= render 'books/comment', book: @book,book_comment: @book_comment%>
+      <%= form_with model:[@book,@book_comment] do |f| %>
+        <%= f.text_area :comment, size:"90x5" %>
+        <%= f.submit '送信' %>
+      <% end %>
     </div>
   </div>
 </div>
